**Project 1 Review Pull** _-AKK_
---

 **_do not merge merge this code_**

This is for you to look over and allows us to give direct feedback on your code in addition to a spreadsheet of more quantified grades

below is a brief summary, if you compare changes you will see any comments I made in your code highlighted in each file

---

**Glows:** :star:️
- excellent game demo and presentation
- great implementation on Javascript dom manipulation, collision detection, and physics for Pong
- great code organization
- used semantic html following best practices

---

**Grows:** :seedling:
- planning documentation needs to be cleaned up and more thorough, I know it seems secondary to being able to create the actual project, but I promise it will help you and your development process SO MUCH
- improve workflow by making more commits to better show progress
- make more JS comments that are more descriptive

---

**nits:** 🥢 (minor things)
- learn to love arrow function
- be more consistent with the styling of you comments

---

Congratulations on a job very well done, keep up the great work Salam! :grin:

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <span>Player_1 name: </span><span><input id="text-1" class="input-text" type="text" ></span>
         </div>
         <div id="Player-2">
+            <!-- unmatched closing span tag below -->
             <span>Player_2 name: </span><input id="text-2" class="input-text" type="text"></span>
         </div>
 
